--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_ZDJS.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_ZDJS.cshtml
@@ -124,8 +124,57 @@
             &nbsp;&nbsp;&nbsp;&nbsp;（2）因乙方按审核规则进行资质审核、系统升级更新等原因有可能使推广服务开通晚于双方约定或乙方网页公布的时间，甲方给予理解。推广服务开始时间以实际开通为准。<br />
             &nbsp;&nbsp;&nbsp;&nbsp;（3）乙方信息小镇网是分类信息平台，乙方无法对甲方推广内容的真实性、准确性和完整性进行查证，对于甲方的推广内容不承担任何保证责任，甲方自行对其提供的推广内容、产品、服务等承担全部责任。甲方在推广时，不得擅自在推广内容中使用信息小镇推荐、授权等任何使公众认为该等推广内容经过信息小镇授权等字样。违反前述规定的，乙方有权解除本协议并追究甲方的法律责任。 <br/>
             &nbsp;&nbsp;&nbsp;&nbsp;（4）乙方将尽力维护58推广服务的安全性和方便性，但对甲方使用推广服务过程中出现的信息删除或存储失败等不承担任何责任。<br />
-            &nbsp;&nbsp;&nbsp;&nbsp;（5）乙方保留判定甲方行为是否符合信息小镇服务相关的协议、规则要求的权利，如果甲方违反了上述协议、规则的规定，乙方有权终止提供推广服务。<br /> 
+            &nbsp;&nbsp;&nbsp;&nbsp;（5）乙方保留判定甲方行为是否符合信息小镇服务相关的协议、规则要求的权利，如果甲方违反了上述协议、规则的规定，乙方有权终止提供推广服务。<br />
+            四、充值支付及推广服务使用约定<br/>
+            &nbsp;&nbsp;&nbsp;&nbsp;1、甲方可根据信息小镇网的服务类型和自身需求，选择不同的信息小镇充值渠道、充值类型。 <br/>
+            &nbsp;&nbsp;&nbsp;&nbsp;2、甲方进行充值支付和使用信息小镇服务属于自愿行为，甲方明确同意：不管以何种方式、充值渠道、充值类型进行充值后均不可要求退款，也不可兑换成现金，只能用于信息小镇服务、产品的消费抵扣。特殊情况下，如充值余额经乙方同意后兑换成现金的，乙方有权收取合理的手续费。 <br />
+            &nbsp;&nbsp;&nbsp;&nbsp;3、乙方将在信息小镇网相关页面公布各充值类型的充值规则、使用规则、转换规则等，甲方应随时查看，一旦公布即视为甲方已知悉并需要遵守相关规则。<br />
+            &nbsp;&nbsp;&nbsp;&nbsp;4、乙方对于任何甲方从非信息小镇网官方渠道获得的充值余额不予承认，并保持随时清零的权利。 <br />
+            &nbsp;&nbsp;&nbsp;&nbsp;5、乙方不提供用户之间的充值余额互转服务。<br />
+            &nbsp;&nbsp;&nbsp;&nbsp;6、为保证用户充值支付、使用推广服务的便捷性和安全性，用户在使用网上银行的充值方式时，乙方可能会随机或指定提供不同的第三方支付平台完成充值支付，用户对此表示同意和接受。<br/>
+            &nbsp;&nbsp;&nbsp;&nbsp;7、根据甲方选择的不同的充值类型、服务类型，甲方还应遵守以下专用条款：<br />
+            &nbsp;&nbsp;&nbsp;&nbsp;（1）【招聘业务专用条款】1)甲方发布的招聘信息所描述的职位、薪资、福利补助等需与实际工作完全一致。2)甲方不得扣押或以保管为名索要求职者的身份证、毕业证等证件。3)不具备职介性质的公司在招聘活动中不得向求职者收取任何费用；职介性质的公司，应在招聘信息中明确说明收取费用的明细。4)不具备劳务派遣资格或职介性质的公司，不得代为其他企业招聘。5)劳务派遣性质、职介性质的公司，只能签约HR版代为其他企业招聘，其代为招聘的企业如发生违反上述管理规定的行为时，该劳务派遣或职介公司应负连带责任。<br />
+            &nbsp;&nbsp;&nbsp;&nbsp;（2）【金牌HR专用条款】甲方如购买信息小镇“金牌HR网邻通”推广服务的，应按本协议约定及信息小镇网站公示之“金牌HR”相关的全部规则、说明以在线支付/转账汇款/现金的方式向信息小镇支付保障金。 <br />
+            &nbsp;&nbsp;&nbsp;&nbsp;（3）【汽车业务专用条款】  1)甲方不得发布下线车（出租车）、报废车等信息。 2)甲方不得发布违法车源信息（如套牌、走私、罚没车辆、重大事故车等违反国家法律的信息）。 3)甲方不得未经合法授权使用他人主体资格证明文件和相关经营资质开通或使用信息小镇服务。 4)甲方购买“汽车API”服务的，还应遵循如下条款：甲方承诺通过API接口提供的信息符合法律、法规、规范性文件及信息小镇相关规则及技术要求；该等信息不存在剽窃、抄袭、拷贝、擅自使用或其他任何侵犯他人合法权利（包括但不限于知识产权、肖像权、商标专用权等）的行为。甲方应对API接口信息的内容、技术支持等独立承担一切法律责任；如遇甲方系统中断使得API接口信息不能正常使用等情况，不视为信息小镇违约。 5)甲方使用“收车线索”服务的，应保证对于获取的乙方匹配发送的卖车信息发布者（以下简称“信息主体”）发布的的卖车信息的使用目的合法，不得利用该信息侵犯信息主体的合法权益。甲方不得将获取的收车线索信息以无偿或有偿的形式提供给其他任何第三方；不得用于除与信息主体开展车辆交易服务之外的其他任何目的。甲方确认对与信息主体利用乙方提供的收车线索在自行开展的咨询或沟通过程中的全部行为独立承担责任，甲方不得以乙方或乙方关联公司的名义向信息主体进行任何虚假或不实的承诺。甲方确认知悉乙方及乙方的关联公司仅就在收车线索产品服务中向甲方提供网络技术支持及服务，乙方非信息的发布者，不对信息内容的真实性、合法性、时效性等承担任何保证责任。 <br />
+            &nbsp;&nbsp;&nbsp;&nbsp;（4）【房产业务专用条款】甲方同意履行如下义务： 1)甲方承诺上传于信息小镇网站诚信房源专区的房源信息真实有效，可以实地看房，并接受来自用户的点评及信息小镇的监督。2)甲方应在房源描述页面等所有信息小镇网站提供的渠道中，对房源进行如实描述，包括但不限于对房源的基本信息、地理位置、房屋图片、价格等信息进行真实、完整的描述，并对描述的房源信息负有举证责任。3)甲方承诺，所发布的房源信息中含有的照片为房源实景拍摄图，并保证该图片不会侵犯任何第三方的合法权益。4)甲方明确了解并同意乙方及其关联公司仅向甲方提供相关技术支持及服务，不对甲方的服务内容、发布信息内容承担任何保证责任。当发生买家评价图片虚假，价格虚假，房源描述与房源本身不符等内容时，甲方应积极处理。5)当甲方获得差评条数达到一定数量时，需无条件地接受乙方的违规处罚，乙方有权对差评评价规则及违规处罚规则进行调整。6)甲方根据本条款之约定，不可撤销地授权乙方及其关联公司根据信息小镇网站使用规则及信息小镇网站其他公示规则的规定，在不另行通知的情况下对甲方账户、甲方信息作出处理。<br/>
+            &nbsp;&nbsp;&nbsp;&nbsp;（5）【保障计划专用条款】如甲方参加信息小镇网站的保障计划（包括但不限于诚信房源等信息小镇网站不定期推出的诚信保障计划），除需按本协议约定或信息小镇网站规定以在线支付/转账汇款/现金的方式支付保障金外（如有），还应该并且同意遵守信息小镇网站上所规定的服务规则、开通及处理规则、名词解释、活动规定、服务协议等与保障计划相关的各种规定。 <br/>
+            &nbsp;&nbsp;&nbsp;&nbsp;（6）【宠物产品专用条款】甲方在购买信息小镇宠物产品网络推广服务时，应按本协议约定及信息小镇网站公示之《信息小镇诚信犬舍诚信保障服务条款》等相关规定以在线支付/转账汇款/现金的方式向信息小镇支付保障金，并应遵守信息小镇网站公示的与“信息小镇诚信犬舍保障计划”相关的各种规则、说明。 <br/>
+            &nbsp;&nbsp;&nbsp;&nbsp;（8）【推广余额专用条款】1)甲方充值购买推广余额即视为已经购买信息小镇网站的相关服务，所支付的款项将不予退还，只能用于按照信息小镇网站的规定和设置开通使用乙方的相关产品和服务。2)甲方在充值购买推广余额之后，可以授权乙方操作甲方的推广余额账户。乙方可以根据甲方的授权对其推广余额账户进行如下调整操作：a,开通推广服务（推广服务类型：置顶、智能推广、精准推广、品牌推广）；b,暂停、终止推广服务；c,选择推广服务数量；d,变更推广区域等。3)甲方有义务对其推广余额账户进行有效管理，如甲方未将其推广余额账户转化为乙方提供的相关推广产品或服务进行消耗（即未消费行为）超过2年，乙方有权在2年期满后的当月一次性扣除上述期间甲方的账户管理费，扣除标准为未消费行为发生之日起每月收取其账户余额的5%，甲方推广余额产品服务时长视为期满。<br />
+            &nbsp;&nbsp;&nbsp;&nbsp;8、甲方应保证是推广服务的内容及推广链接的网站的合法权利人，在本协议范围内使用推广内容不会侵害任何第三人的合法权益（该权益包括但不限于著作权、商标权、肖像权，专利权、商业秘密）。如甲方违反此保证导致任何法律纠纷，由甲方自行承担责任；给乙方及任何第三方造成损失的，还应予以赔偿。<br />
+            &nbsp;&nbsp;&nbsp;&nbsp;9、甲方应保证发布的推广内容中涉及的文字、图片、链接、链接所指向网站等各个部分之间的一致性与相关性，且推广内容整体效果不会引起乙方网站用户误解。 <br />
+            五、第三方投诉的处理<br/>
+            &nbsp;&nbsp;&nbsp;&nbsp;1、任何第三方投诉甲方在信息小镇网站推广的信息侵犯其合法权益，乙方将通知甲方与第三方妥善解决争议。乙方有权暂停对甲方的推广服务及/或屏蔽、删除信息直至甲方与第三方达成一致。<br />
+            &nbsp;&nbsp;&nbsp;&nbsp;2、任何行政机关或者第三方对于信息小镇网站上甲方的推广内容提出质询（包括但不限于第三方以发函、媒体报道等形式指控侵权、提起诉讼、向相关主管机关举报使乙方遭受审查或质询等），并认为该内容涉嫌违反国家法律法规的相关规定或者侵犯了第三方的合法权益，在调查期间，乙方有权停止对甲方的推广服务及信息发布服务。甲方同意，在接到乙方通知后，甲方应以自己名义出面与第三方协商、应诉或接受相关主管机关审查或质询。甲方同意承担由此给乙方造成的损失，该等损失包括但不限于乙方为协调该事项实际支出的费用、诉讼费、罚款、律师费等。乙方有权从甲方充值余额中扣除相关损失，如甲方充值余额不足以弥补乙方损失的，乙方保留向甲方追偿的权利。 <br/>
+            六、用户数据的使用及保护<br/>
+            &nbsp;&nbsp;&nbsp;&nbsp;1、为了履行本协议，乙方会在信息小镇的服务器上保留甲方的信息，包括但不限于注册信息、消费信息、推广内容等。甲方同意信息小镇基于系统升级、测试、更新等目的使用甲方的信息。 <br/>
+            &nbsp;&nbsp;&nbsp;&nbsp;2、用户理解并同意信息小镇可能会基于法律法规的相关规定向相应的司法或者行政机关提供用户的相关数据信息。<br/>
+            七、反商业贿赂条款<br/>
+            &nbsp;&nbsp;&nbsp;&nbsp;甲乙双方均不得在签约过程中，为获得交易机会或有利的交易机会而向对方任何工作人员（包括其家属、朋友或有直接或间接关系人士）提供金钱的、实物的或其他任何形式的贿赂、回扣。甲方有义务就乙方人员任何形式的索取或收受财物行为及时向乙方举报（举报邮箱：mail@infotownlet.com）。<br/>
+            八、知识产权及保密条款 <br/>
+            &nbsp;&nbsp;&nbsp;&nbsp;1、双方均承诺各自提供的产品、品牌及其相关的全部知识产权不侵犯任何第三方的合法权益。双方因履行本协议约定义务而被授权接触或使用对方之商标专利、著作权或其他任何相关资料涉及的任何专有权均不视为转移上述权利的所有权，上述权利的所有者应属于提供方。<br/>
+            &nbsp;&nbsp;&nbsp;&nbsp;2 、除本协议规定之工作所需外，未经对方事先书面同意，任何一方不得擅自使用、复制对方的商标、标志、商业信息、技术及其他资料。任何一方从对方获得的知识产权授权许可不得用于超出本协议约定的目的和范围以为的其他用途。 <br/>
+            &nbsp;&nbsp;&nbsp;&nbsp;3 、甲乙双方各自对其软件及技术享有专有权利，未经权利人的明确授权，任何一方不得更改、演绎、拆分、反解对方的技术和程序或以其他任何方式进行可能损害对方专有权利的行为。 <br/>
+            &nbsp;&nbsp;&nbsp;&nbsp;4 、甲方应对签署及履行本协议过程中所知悉的乙方及乙方用户的各类信息及资料（包括但不限于甲方通过线上收集到的乙方平台用户信息等）严格保密，积极维护乙方及乙方用户的合法权益，未经乙方及乙方用户书面同意，甲方不得向任何第三方透露，更不得将该等信息及资料用于任何商业用途。<br/>
+            &nbsp;&nbsp;&nbsp;&nbsp;5 、未经另一方的事先书面同意，一方不得向任何第三方披露或泄漏其基于本协议直接或间接从另一方获得的关于另一方的商业机密，但依据双方约定、有关法律、法规、政府部门、证券交易所或其它监管机构要求和甲乙双方为履行工作和职责而需要知道该种保密信息的雇员、管理人员、董事、代理商和或顾问除外。 <br/>
+            &nbsp;&nbsp;&nbsp;&nbsp;6 、本条款有效期为协议履行完毕或解除/终止后3年内。 <br/>
+            九、免责声明 <br/>
+            &nbsp;&nbsp;&nbsp;&nbsp;1、甲方了解并同意：<br />
+            &nbsp;&nbsp;&nbsp;&nbsp;（1）甲方明确同意其使用信息小镇服务所存在的风险将完全由其自己承担；因其使用信息小镇服务而产生的一切后果也由其自己承担。<br />
+            &nbsp;&nbsp;&nbsp;&nbsp;（2）甲方对其发布的推广内容的准确性、完整性和合法性负有全部责任。一旦发现甲方发布虚假信息，信息小镇网有权对甲方做出关闭账户、删除信息、要求甲方赔偿给乙方造成的包括商誉损失在内的全部损失等处理。由此导致信息小镇网站其他用户向乙方索赔的，乙方有权向甲方追偿。<br />
+            &nbsp;&nbsp;&nbsp;&nbsp;（3）乙方对下列情形不承担任何责任：<br/>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;（a）并非由于乙方的故意或过失而导致信息小镇推广服务未能注册成功；<br />
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;（b）由于甲方或其代理商的故意或过失导致甲方遭受损失的；<br />
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;（c）由于乙方对信息小镇推广服务系统进行系统测试、升级、更新、服务抽样测试，对甲方产生的任何影响。<br />
+            &nbsp;&nbsp;&nbsp;&nbsp;2、乙方对由于政府行为譬如政策或法规的变更、自然灾害或战争、通讯线路中断、黑客攻击、计算机病毒侵入或发作、电信部门技术调整、因政府管制而造成网站的暂时性关闭等任何影响网络正常运营的不可抗力事件，以及他人蓄意破坏、正常的系统维护、系统升级，或者因网络拥塞而导致本网站不能访问而造成的本网站所提供的信息及数据的延误、停滞或错误，以及使用者由此受到的一切损失不承担任何责任。<br />
+            &nbsp;&nbsp;&nbsp;&nbsp;3、信息小镇服务不能保证以下事项：<br />
+            &nbsp;&nbsp;&nbsp;&nbsp;（1）信息小镇推广服务上发布的推广服务相关信息的正确性、准确性、可靠性或其他方面；<br />
+            &nbsp;&nbsp;&nbsp;&nbsp;（2）信息小镇推广服务不能保证网络服务一定能满足用户的要求，也不担保网络服务不会中断，对网络服务的及时性、安全性、准确性也都不作担保。<br />
+            &nbsp;&nbsp;&nbsp;&nbsp;（3）信息小镇推广服务不保证能够长期无错误运营，也不保证服务器不受病毒或其他故障的侵扰。<br />
+            &nbsp;&nbsp;&nbsp;&nbsp;（4）信息小镇不对推广服务效果承担任何保证责任，推广效果主要基于推广产品的质量及用户体验等因素，故58同城无需对推广效果负责，推广效果亦不可作为影响本协议执行及各方履行合同义务的因素或理由。<br />
 
+
+
+        
         </div>
     </div>
 </body>
