--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_ZDJS.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_ZDJS.cshtml
@@ -150,14 +150,14 @@
             &nbsp;&nbsp;&nbsp;&nbsp;2、用户理解并同意信息小镇可能会基于法律法规的相关规定向相应的司法或者行政机关提供用户的相关数据信息。<br/>
             七、反商业贿赂条款<br/>
             &nbsp;&nbsp;&nbsp;&nbsp;甲乙双方均不得在签约过程中，为获得交易机会或有利的交易机会而向对方任何工作人员（包括其家属、朋友或有直接或间接关系人士）提供金钱的、实物的或其他任何形式的贿赂、回扣。甲方有义务就乙方人员任何形式的索取或收受财物行为及时向乙方举报（举报邮箱：mail@infotownlet.com）。<br/>
-            八、知识产权及保密条款 <br/>
+            八、知识产权及保密条款<br/>
             &nbsp;&nbsp;&nbsp;&nbsp;1、双方均承诺各自提供的产品、品牌及其相关的全部知识产权不侵犯任何第三方的合法权益。双方因履行本协议约定义务而被授权接触或使用对方之商标专利、著作权或其他任何相关资料涉及的任何专有权均不视为转移上述权利的所有权，上述权利的所有者应属于提供方。<br/>
             &nbsp;&nbsp;&nbsp;&nbsp;2 、除本协议规定之工作所需外，未经对方事先书面同意，任何一方不得擅自使用、复制对方的商标、标志、商业信息、技术及其他资料。任何一方从对方获得的知识产权授权许可不得用于超出本协议约定的目的和范围以为的其他用途。 <br/>
             &nbsp;&nbsp;&nbsp;&nbsp;3 、甲乙双方各自对其软件及技术享有专有权利，未经权利人的明确授权，任何一方不得更改、演绎、拆分、反解对方的技术和程序或以其他任何方式进行可能损害对方专有权利的行为。 <br/>
             &nbsp;&nbsp;&nbsp;&nbsp;4 、甲方应对签署及履行本协议过程中所知悉的乙方及乙方用户的各类信息及资料（包括但不限于甲方通过线上收集到的乙方平台用户信息等）严格保密，积极维护乙方及乙方用户的合法权益，未经乙方及乙方用户书面同意，甲方不得向任何第三方透露，更不得将该等信息及资料用于任何商业用途。<br/>
             &nbsp;&nbsp;&nbsp;&nbsp;5 、未经另一方的事先书面同意，一方不得向任何第三方披露或泄漏其基于本协议直接或间接从另一方获得的关于另一方的商业机密，但依据双方约定、有关法律、法规、政府部门、证券交易所或其它监管机构要求和甲乙双方为履行工作和职责而需要知道该种保密信息的雇员、管理人员、董事、代理商和或顾问除外。 <br/>
             &nbsp;&nbsp;&nbsp;&nbsp;6 、本条款有效期为协议履行完毕或解除/终止后3年内。 <br/>
-            九、免责声明 <br/>
+            九、免责声明<br/>
             &nbsp;&nbsp;&nbsp;&nbsp;1、甲方了解并同意：<br />
             &nbsp;&nbsp;&nbsp;&nbsp;（1）甲方明确同意其使用信息小镇服务所存在的风险将完全由其自己承担；因其使用信息小镇服务而产生的一切后果也由其自己承担。<br />
             &nbsp;&nbsp;&nbsp;&nbsp;（2）甲方对其发布的推广内容的准确性、完整性和合法性负有全部责任。一旦发现甲方发布虚假信息，信息小镇网有权对甲方做出关闭账户、删除信息、要求甲方赔偿给乙方造成的包括商誉损失在内的全部损失等处理。由此导致信息小镇网站其他用户向乙方索赔的，乙方有权向甲方追偿。<br />
@@ -170,11 +170,20 @@
             &nbsp;&nbsp;&nbsp;&nbsp;（1）信息小镇推广服务上发布的推广服务相关信息的正确性、准确性、可靠性或其他方面；<br />
             &nbsp;&nbsp;&nbsp;&nbsp;（2）信息小镇推广服务不能保证网络服务一定能满足用户的要求，也不担保网络服务不会中断，对网络服务的及时性、安全性、准确性也都不作担保。<br />
             &nbsp;&nbsp;&nbsp;&nbsp;（3）信息小镇推广服务不保证能够长期无错误运营，也不保证服务器不受病毒或其他故障的侵扰。<br />
-            &nbsp;&nbsp;&nbsp;&nbsp;（4）信息小镇不对推广服务效果承担任何保证责任，推广效果主要基于推广产品的质量及用户体验等因素，故58同城无需对推广效果负责，推广效果亦不可作为影响本协议执行及各方履行合同义务的因素或理由。<br />
+            &nbsp;&nbsp;&nbsp;&nbsp;（4）信息小镇不对推广服务效果承担任何保证责任，推广效果主要基于推广产品的质量及用户体验等因素，故信息小镇无需对推广效果负责，推广效果亦不可作为影响本协议执行及各方履行合同义务的因素或理由。<br />
+            十、损害赔偿<br />
+            &nbsp;&nbsp;&nbsp;&nbsp;1 、由于甲方通过使用本协议项下推广服务提供、公布或传送的内容侵害他人任何权利而导致乙方遭受任何判决、行政处罚或支付任何赔偿金、律师费、诉讼费、差旅费等费用的，乙方有权从甲方充值余额中扣除相关损失，如甲方充值余额不足以弥补乙方损失的，乙方保留向甲方追偿的权利。<br />
+            &nbsp;&nbsp;&nbsp;&nbsp;2 、协议生效后，若甲方单方解除协议，除应支付乙方实际损失（包含但不限于网站制作费300元、已消耗的推广优惠等）外，还应另行向乙方一次性支付协议总金额的10%作为违约金。甲方同意乙方可依据本协议从甲方已缴纳的服务费中扣除相关损失及违约金。 <br />
+            &nbsp;&nbsp;&nbsp;&nbsp;3 、甲方违反法律法规及本协议任一条款约定损害乙方利益、商誉和品牌形象的，乙方有权终止提供服务，甲方应赔偿由此给乙方造成的包括商誉在内的全部损失，甲方同意乙方可从甲方已支付的服务费用中扣除相关损失。如该部分金额不足以弥补乙方损失的，乙方有权追偿。 <br />
+            &nbsp;&nbsp;&nbsp;&nbsp;4、甲方在投诉其他用户有违法行为或违反本协议情形时，投诉者应承担不实投诉所产生的全部法律责任。如侵犯他人的合法权益，投诉人应独立承担全部法律责任。<br />
+            十一、不可抗力<br />
+            &nbsp;&nbsp;&nbsp;&nbsp;因战争、暴动、自然灾害、政府行政行为、电力中断、互联网不法攻击、第三方互联网通讯供应商原因、乙方操作平台及软件原因、网站服务器、数据库系统维护及系统升级而导致乙方服务器不能正常接入或临时性障碍无法履行或延迟履行本协议约定之义务时，不视为乙方违约。 <br />
+            十二、法律适用和争议解决 <br />
+            &nbsp;&nbsp;&nbsp;&nbsp;1、本协议之订立、生效、解释、修订、补充、终止、执行和争议解决均适用中华人民共和国法律。如法律无相关规定的，则应参照通用国际商业惯例和（或）行业惯例。<br />
+            &nbsp;&nbsp;&nbsp;&nbsp;2、如本协议条款与国家法律相抵触时，则这些条款将完全按法律规定重新解释，其它条款则依旧保持对双方产生法律效力和影响。<br />
+            &nbsp;&nbsp;&nbsp;&nbsp;3、因本协议产生之争议、纠纷，应由信息小镇与您友好协商；协商不成的，应依照中华人民共和国法律予以处理，并以福建省福州市鼓楼区人民法院为第一审管辖法院；按照中华人民共和国法律，因级别管辖的规定，福建省福州市鼓楼区人民法院无权管辖的，以其上级法院作为第一审管辖法院。 <br />
 
 
-
-        
         </div>
     </div>
 </body>
