--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_ZDJS.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_ZDJS.cshtml
@@ -26,59 +26,59 @@
     </div>
     <div class="div_body">
         <div class="div_body_nav">
-            <span class="span_body_nav">1、<span class="span_body_nav_inner">置顶是什么？</span></span>
-            <span class="span_body_nav">2、<span class="span_body_nav_inner">置顶有什么好处？</span></span>
-            <span class="span_body_nav">3、<span class="span_body_nav_inner">计划置顶是什么？</span></span>
-            <span class="span_body_nav">4、<span class="span_body_nav_inner">置顶怎么展示？</span></span>
-            <span class="span_body_nav">5、<span class="span_body_nav_inner">立即置顶怎么操作？</span></span>
-            <span class="span_body_nav">6、<span class="span_body_nav_inner">立即置顶怎么扣费？</span></span>
-            <span class="span_body_nav">7、<span class="span_body_nav_inner">计划置顶怎么操作？</span></span>
-            <span class="span_body_nav">8、<span class="span_body_nav_inner">计划置顶怎么扣费？</span></span>
-            <span class="span_body_nav">9、<span class="span_body_nav_inner">简历置顶规则</span></span>
-            <span class="span_body_nav">10、<span class="span_body_nav_inner">置顶规则与协议</span></span>
-            <span class="span_body_nav">11、<span class="span_body_nav_inner">用户余额怎么提现？</span></span>
-            <span class="span_body_nav">12、<span class="span_body_nav_inner">信息小镇推广用户服务协议</span></span>
+            <span class="span_body_nav" id="1">1、<span class="span_body_nav_inner">置顶是什么？</span></span>
+            <span class="span_body_nav" id="2">2、<span class="span_body_nav_inner">置顶有什么好处？</span></span>
+            <span class="span_body_nav" id="3">3、<span class="span_body_nav_inner">计划置顶是什么？</span></span>
+            <span class="span_body_nav" id="4">4、<span class="span_body_nav_inner">置顶怎么展示？</span></span>
+            <span class="span_body_nav" id="5">5、<span class="span_body_nav_inner">立即置顶怎么操作？</span></span>
+            <span class="span_body_nav" id="6">6、<span class="span_body_nav_inner">立即置顶怎么扣费？</span></span>
+            <span class="span_body_nav" id="7">7、<span class="span_body_nav_inner">计划置顶怎么操作？</span></span>
+            <span class="span_body_nav" id="8">8、<span class="span_body_nav_inner">计划置顶怎么扣费？</span></span>
+            <span class="span_body_nav" id="9">9、<span class="span_body_nav_inner">简历置顶规则</span></span>
+            <span class="span_body_nav" id="10">10、<span class="span_body_nav_inner">置顶规则与协议</span></span>
+            <span class="span_body_nav" id="11">11、<span class="span_body_nav_inner">用户余额怎么提现？</span></span>
+            <span class="span_body_nav" id="12">12、<span class="span_body_nav_inner">信息小镇推广用户服务协议</span></span>
         </div>
-        <div class="div_body_nav_title">1.置顶是什么？</div>
+        <div class="div_body_nav_title" id="div_body_nav_title_1">1.置顶是什么？</div>
         <div class="div_body_nav_text">
             &nbsp;&nbsp;&nbsp;&nbsp;信息置顶是信息小镇为用户提供的一项<a class="highlight">增值服务</a>,用户可通过账户余额或第三方支付来购买该服务。信息置顶后，在同类别中显示在列表<span class="highlight">最靠前的位置</span>,，该信息不因为有新的帖子发布额往后排。
         </div>
-        <div class="div_body_nav_title">2.置顶有什么好处？</div>
+        <div class="div_body_nav_title" id="div_body_nav_title_2">2.置顶有什么好处？</div>
         <div class="div_body_nav_text">
             &nbsp;&nbsp;&nbsp;&nbsp;置顶的好处在于信息<a class="highlight">不因为有新的帖子发布而往后排</a>,这样能保证用户的帖子在同类信息中<a class="highlight">受到最多的关注</a>。因为网友在浏览信息时都会先浏览靠前的内容，这样您发布信息的有效性就得到了保障。
         </div>
-        <div class="div_body_nav_title">3.计划置顶是什么？</div>
+        <div class="div_body_nav_title" id="div_body_nav_title_3">3.计划置顶是什么？</div>
         <div class="div_body_nav_text">
             &nbsp;&nbsp;&nbsp;&nbsp;计划置顶是系统根据您的置顶计划自动完成周期性置顶操作，您可以按星期设置循环持续的置顶时段，在您设置的置顶时间段内，系统自动帮您完成操作，获得更长期更持续的推广效果，省时省力更省心。
         </div>
-        <div class="div_body_nav_title">4.置顶怎么展示？</div>
+        <div class="div_body_nav_title" id="div_body_nav_title_4">4.置顶怎么展示？</div>
         <div class="div_body_nav_text">
             &nbsp;&nbsp;&nbsp;&nbsp;置顶后信息将智能投放在与您信息发布类别高相关页面，不跨类别情况下至少展示了32个相关频道页面 。最大化的实现高智能（自动）+高精准（相关） 频道页面投放。置顶信息将以轮播的方式，动态更新置顶区域排序，让每条置顶信息获得更平均的展示机会。<br />
             &nbsp;&nbsp;&nbsp;&nbsp;当<a class="highlight">购买数量＞展示数量</a>,时，超出展示数量的置顶信息将会进入隐藏队列，等待<a class="highlight">轮播展示</a>；已经在展示中的置顶信息，在列表页轮播一段时间后也会再次进入隐藏队列，等待下一轮的展现。
         </div>
-        <div class="div_body_nav_title">5.立即置顶怎么操作？</div>
+        <div class="div_body_nav_title" id="div_body_nav_title_5">5.立即置顶怎么操作？</div>
         <div class="div_body_nav_text">
             &nbsp;&nbsp;&nbsp;&nbsp;当您成功发布信息或在个人中心管理信息时，进入立即置顶设置页面，根据提示选择您所需的置顶时长，确定提交即可。设置置顶会扣除对应业务线的推广币（不足时也会扣小镇现金），如果您的业务线推广币和小镇现金仍然不够，您可以选择用微信、支付宝支付剩余的钱，或者选择在线充值推广币和小镇现金。
         </div>
-        <div class="div_body_nav_title">6.立即置顶怎么扣费？</div>
+        <div class="div_body_nav_title" id="div_body_nav_title_6">6.立即置顶怎么扣费？</div>
         <div class="div_body_nav_text">
             &nbsp;&nbsp;&nbsp;&nbsp;选择置顶天数后点击“立即置顶”按钮，系统会自动扣除您账户中相应的费用。<br/>
             &nbsp;&nbsp;&nbsp;&nbsp;对于正在置顶中的信息，当您点击“结束置顶”并确认后，系统将根据您的已置顶时长<a class="highlight">（立即置顶不足1小时按1小时算）</a>返还您不同比例的剩余费用，具体为：<br/>
             &nbsp;&nbsp;&nbsp;&nbsp;当置顶时长<a class="highlight">小于2小时</a>时，返还您<a class="highlight">40%</a>剩余费用；当置顶时长<a class="highlight">大于2小时且小于12小时</a>时，返还您<a class="highlight">50%</a>剩余费用；当置顶时长<a class="highlight">大于12小时且小于24小时</a>时，返还您<a class="highlight">75%</a>剩余费用；当置顶时长<a class="highlight">大于24小时且小于72小时</a>时，返还您<a class="highlight">90%</a>剩余费用；当置顶时长<a class="highlight">大于72小时</a>时，返还您<a class="highlight">95%</a>剩余费用。
         </div>
-        <div class="div_body_nav_title">7.计划置顶怎么操作？</div>
+        <div class="div_body_nav_title" id="div_body_nav_title_7">7.计划置顶怎么操作？</div>
         <div class="div_body_nav_text">
             &nbsp;&nbsp;&nbsp;&nbsp;当您成功发布信息或在个人中心管理信息时，进入计划置顶设置页面，根据提示选择您选择星期一到星期日的置顶时段，然后设置计划置顶的开始时间和结束时间，确定提交即可。设置置顶会扣除对应业务线的推广币（不足时也会扣小镇现金），如果您的业务线推广币和58现金仍然不够，您可以选择用微信、支付宝支付剩余的钱，或者选择在线充值推广币和小镇现金。
         </div>
-        <div class="div_body_nav_title">8.计划置顶怎么扣费？</div>
+        <div class="div_body_nav_title" id="div_body_nav_title_8">8.计划置顶怎么扣费？</div>
         <div class="div_body_nav_text">
             &nbsp;&nbsp;&nbsp;&nbsp;设置好计划置顶并提交后，页面会提示您预计需支付的钱并一次性扣除计划置顶推广费用。对于正在置顶中的信息，当您点击“结束置顶”并确认后，系统将根据您的已置顶时长<a class="highlight">（计划置顶时间不足1天按1天算）</a>返还您剩余推广余额的<a class="highlight">95%</a>。
         </div>
-        <div class="div_body_nav_title">9.简历置顶扣费规则</div>
+        <div class="div_body_nav_title" id="div_body_nav_title_9">9.简历置顶扣费规则</div>
         <div class="div_body_nav_text">
             &nbsp;&nbsp;&nbsp;&nbsp;对于置顶中的简历，当用户自己操作结束置顶、删除简历、将简历信息状态变更为对认证企业公开、保密（只对投递的企业公开）或 简历信息状态变更为敏感（审核中）、返回修改时，简历置顶结束，并且不退款；当系统审核用户简历违规时，简历置顶结束，并且不退款。
         </div>
-        <div class="div_body_nav_title">10.置顶规则与协议</div>
+        <div class="div_body_nav_title" id="div_body_nav_title_10">10.置顶规则与协议</div>
         <div class="div_body_nav_text">
             &nbsp;&nbsp;&nbsp;&nbsp;在您使用信息小镇置顶服务前，请您仔细阅读以下规则，您需要理解并同意以下规则才能享受信息小镇置顶服务：<br/>
             &nbsp;&nbsp;&nbsp;&nbsp;（1）当您对置顶中信息进行删除或关闭时，该信息的置顶状态将自动结束，返还费用规则<a class="highlight">同结束置顶</a>。<br/>
@@ -87,11 +87,11 @@
             &nbsp;&nbsp;&nbsp;&nbsp;（4）当您在使用信息小镇置顶服务时，<a class="highlight">必须遵守信息小镇信息发布的相关规定（包含但不限于《信息小镇推广用户协议》）、中国有关法律法规、其他有关国家和地区的法律规定以及国际法的有关规定</a>。若您的行为不符合以上提到的规定及法规，信息小镇将作出独立判断立即取消您的置顶信息，暂停或终止为您提供服务，同时您的账户余额作为罚金将不予返还。<a class="highlight">如您发布的信息造成信息小镇被第三方要求赔偿或发生纠纷、诉讼的，您应向信息小镇全额赔偿损失</a>。<br/>
             &nbsp;&nbsp;&nbsp;&nbsp;（5）请您保护好自己的账户名和密码，不要随意泄露给他人，在<a class="highlight">公共场合登录</a>使用小镇账户时<a class="highlight">注意及时退出</a>，以免账号被盗造成损失。
         </div>
-        <div class="div_body_nav_title">11.用户余额怎么提现？</div>
+        <div class="div_body_nav_title" id="div_body_nav_title_11">11.用户余额怎么提现？</div>
         <div class="div_body_nav_text">
             &nbsp;&nbsp;&nbsp;&nbsp;当用户小镇账户中有余额并<a class="highlight">想要提现</a>时，可联系小镇客服电话<a class="highlight">400-453-5838</a>申请提现。
         </div>
-        <div class="div_body_nav_title">12.信息小镇用户服务协议</div>
+        <div class="div_body_nav_title" id="div_body_nav_title_12">12.信息小镇用户服务协议</div>
         <div class="div_body_nav_text">
             &nbsp;&nbsp;&nbsp;&nbsp;信息小镇用户服务协议（以下简称“本协议”）是信息小镇用户与信息小镇之间的法律协议。<br/>
             &nbsp;&nbsp;&nbsp;&nbsp;本协议是用户注册账号并充值支付,使用信息小镇网服务时适用的通用条款。因此，请您在注册信息小镇网账号并充值、支付，或接受使用信息小镇对信息小镇用户提供的相关服务之前，详细地阅读本协议的所有内容。信息小镇用户需要了解并同意以下条款所述事项才能完成充值支付,享受信息小镇的各项服务。无论您事实上是否认真阅读，只要您勾选同意或点击确认本协议,或者实际接受了信息小镇的相关服务，就表示您已接受了本协议及信息小镇网公布的各推广服务相关的服务协议和服务规则，并愿意受其约束。如果发生纠纷，您不能以未仔细阅读为由进行抗辩。<br/>
