--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
@@ -22,7 +22,7 @@
                 <span class="span_left_box_info_remark">进入我的账户充值</span>
 
             </div>
-            <div class="div_left_box_info">
+            <div class="div_left_box_info" id="div_left_box_info_zhmm">
                 <img class="img_left_box_info" src="@Url.Content("~/Areas/Business/Css/images/bzzx/bzzx_sy_zhmm.png")" />
                 <span class="span_left_box_info_text">找回密码</span>
                 <span class="span_left_box_info_remark">自助快速找回账户密码</span>
