--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
@@ -35,8 +35,9 @@
             <span class="span_head_left">infotownlet.com</span>
         </div>
         <ul class="ul_head_right">
-            <li class="li_head_right" id="liGRZX">个人中心</li>
-            <li class="li_head_right" id="liZHSZ">账户设置</li>
+            <li class="li_head_right" id="liWDXX">我的信息</li>
+            <li class="li_head_right" id="liWDZH">我的账户</li>
+            <li class="li_head_right" id="liWDZJ">我的资金</li>
             <li class="li_head_right" id="liSHGJ">生活工具</li>
         </ul>
     </div>
@@ -44,20 +45,20 @@
     </div>
     <div id="divContent" class="div_content">
         <div id="divLeftMenu" class="div_left_menu">
-            <ul id="ulGRZX" class="ul_left_menu">
+            <ul id="ulWDXX" class="ul_left_menu">
                 <li class="li_left_menu">
-                    <span class="span_left_menu_first" id="spanQRZH">个人中心</span>
+                    <span class="span_left_menu_first">我的信息</span>
                     <em class="em_left_menu"></em>
                 </li>
                 <li id="li_left_menu_WDFB" class="li_left_menu"><span class="span_left_menu_second" id="spanWDFB">我的发布</span></li>
                 <li id="li_left_menu_WDSC" class="li_left_menu"><span class="span_left_menu_second" id="spanWDSC">我的收藏</span></li>
-                <li id="li_left_menu_WDQZ" class="li_left_menu li_left_menu_expand"><span class="span_left_menu_second" id="spanWDQZ">我的求职</span><img id="imgWDQZ" class="img_left_menu_second" /></li>
+                <li id="li_left_menu_WDQZ" class="li_left_menu li_left_menu_expand"><span class="span_left_menu_second" id="spanWDQZ">我的求职</span><img id="imgWDQZ" src="@Url.Content("~/Areas/Business/Css/images/down.png")" class="img_left_menu_second" /></li>
                 <li id="li_left_menu_WDJL" class="li_left_menu"><span class="span_left_menu_third WDQZ_child" id="spanWDJL">我的简历</span></li>
                 <li id="li_left_menu_TDJL" class="li_left_menu"><span class="span_left_menu_third WDQZ_child" id="spanTDJL">投递记录</span></li>
                 <li id="li_left_menu_GZYQ" class="li_left_menu"><span class="span_left_menu_third WDQZ_child" id="spanGZYQ">工作邀请</span></li>
                 <li id="li_left_menu_JLRZ" class="li_left_menu"><span class="span_left_menu_third WDQZ_child" id="spanJLRZ">简历认证</span></li>
                 <li id="li_left_menu_WDHD" class="li_left_menu"><span class="span_left_menu_third WDQZ_child" id="spanWDHD">我的互动</span></li>
-                <li id="li_left_menu_WDZP" class="li_left_menu li_left_menu_expand"><span class="span_left_menu_second" id="spanWDZP">我的招聘</span><img id="imgWDZP" class="img_left_menu_second" /></li>
+                <li id="li_left_menu_WDZP" class="li_left_menu li_left_menu_expand"><span class="span_left_menu_second" id="spanWDZP">我的招聘</span><img id="imgWDZP" class="img_left_menu_second" src="@Url.Content("~/Areas/Business/Css/images/down.png")" /></li>
                 <li id="li_left_menu_ZWGL" class="li_left_menu"><img id="imgZWGL" class="img_left_menu_third" /><span class="span_left_menu_third WDZP_child" id="spanZWGL">职位管理</span></li>
                 <li id="li_left_menu_QZZW" class="li_left_menu"><span class="span_left_menu_four ZWGL_child" id="spanQZZW">全职职位</span></li>
                 <li id="li_left_menu_JZZW" class="li_left_menu"><span class="span_left_menu_four ZWGL_child" id="spanJZZW">兼职职位</span></li>
@@ -71,9 +72,9 @@
                 <li id="li_left_menu_KHFW" class="li_left_menu"><span class="span_left_menu_second" id="spanKHFW">客户服务</span></li>
                 <li id="li_left_menu_BZZX" class="li_left_menu"><span class="span_left_menu_second" id="spanBZZX">帮助中心</span></li>
             </ul>
-            <ul id="ulZHSZ" class="ul_left_menu">
+            <ul id="ulWDZH" class="ul_left_menu">
                 <li class="li_left_menu">
-                    <span class="span_left_menu_first" id="spanZHSZ">账户设置</span>
+                    <span class="span_left_menu_first">我的账户</span>
                     <em class="em_left_menu"></em>
                 </li>
                 <li class="li_left_menu"><span class="span_left_menu_second" id="spanGRZL">个人资料</span></li>
@@ -82,14 +83,26 @@
                 <li class="li_left_menu"><span class="span_left_menu_second" id="spanMMSZ">密码设置</span></li>
                 <li class="li_left_menu"><span class="span_left_menu_second" id="spanXXGL">消息管理</span></li>
             </ul>
+            <ul id="ulWDZJ" class="ul_left_menu">
+                <li class="li_left_menu">
+                    <span class="span_left_menu_first">我的资金</span>
+                    <em class="em_left_menu"></em>
+                </li>
+                <li id="li_left_menu_XJ" class="li_left_menu li_left_menu_expand"><span class="span_left_menu_second" id="spanXJ">我的现金</span><img id="imgXJ" class="img_left_menu_second" src="@Url.Content("~/Areas/Business/Css/images/down.png")" /></li>
+                <li id="li_left_menu_XJMXCX" class="li_left_menu"><span class="span_left_menu_third WDQZ_child" id="spanXJMXCX">明细查询</span></li>
+                <li id="li_left_menu_XJCZ" class="li_left_menu"><span class="span_left_menu_third WDQZ_child" id="spanXJCZ">充值</span></li>
+                <li id="li_left_menu_TGB" class="li_left_menu li_left_menu_expand"><span class="span_left_menu_second" id="spanTGB">推广币</span><img id="imgTGB" class="img_left_menu_second" src="@Url.Content("~/Areas/Business/Css/images/down.png")" /></li>
+                <li id="li_left_menu_TGBMXCX" class="li_left_menu"><span class="span_left_menu_third WDQZ_child" id="spanTGBMXCX">明细查询</span></li>
+                <li id="li_left_menu_TGBYXQCX" class="li_left_menu"><span class="span_left_menu_third WDQZ_child" id="spanTGBYXQCX">有效期查询</span></li>
+                <li id="li_left_menu_TGBCZ" class="li_left_menu"><span class="span_left_menu_third WDQZ_child" id="spanTGBCZ">充值</span></li>
+            </ul>
             <ul id="ulSHGJ" class="ul_left_menu">
                 <li class="li_left_menu">
-                    <span class="span_left_menu_first" id="spanSHGJ">生活工具</span>
+                    <span class="span_left_menu_first">生活工具</span>
                     <em class="em_left_menu"></em>
                 </li>
                 <li class="li_left_menu"><span class="span_left_menu_second" id="spanHFCZ">话费充值</span></li>
                 <li class="li_left_menu"><span class="span_left_menu_second" id="spanYXCZ">游戏充值</span></li>
-                @*<li class="li_left_menu"><span class="span_left_menu_second" id="spanHCDP">火车订票</span></li>*@
                 <li class="li_left_menu"><span class="span_left_menu_second" id="spanWZCX">违章查询</span></li>
                 <li class="li_left_menu"><span class="span_left_menu_second" id="spanJDYD">酒店预订</span></li>
             </ul>
