--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
@@ -89,12 +89,12 @@
                     <em class="em_left_menu"></em>
                 </li>
                 <li id="li_left_menu_XJ" class="li_left_menu li_left_menu_expand"><span class="span_left_menu_second" id="spanXJ">我的现金</span><img id="imgXJ" class="img_left_menu_second" src="@Url.Content("~/Areas/Business/Css/images/down.png")" /></li>
-                <li id="li_left_menu_XJMXCX" class="li_left_menu"><span class="span_left_menu_third WDQZ_child" id="spanXJMXCX">明细查询</span></li>
-                <li id="li_left_menu_XJCZ" class="li_left_menu"><span class="span_left_menu_third WDQZ_child" id="spanXJCZ">充值</span></li>
-                <li id="li_left_menu_TGB" class="li_left_menu li_left_menu_expand"><span class="span_left_menu_second" id="spanTGB">推广币</span><img id="imgTGB" class="img_left_menu_second" src="@Url.Content("~/Areas/Business/Css/images/down.png")" /></li>
-                <li id="li_left_menu_TGBMXCX" class="li_left_menu"><span class="span_left_menu_third WDQZ_child" id="spanTGBMXCX">明细查询</span></li>
-                <li id="li_left_menu_TGBYXQCX" class="li_left_menu"><span class="span_left_menu_third WDQZ_child" id="spanTGBYXQCX">有效期查询</span></li>
-                <li id="li_left_menu_TGBCZ" class="li_left_menu"><span class="span_left_menu_third WDQZ_child" id="spanTGBCZ">充值</span></li>
+                <li id="li_left_menu_XJMXCX" class="li_left_menu"><span class="span_left_menu_third XJ_child" id="spanXJMXCX">明细查询</span></li>
+                <li id="li_left_menu_XJCZ" class="li_left_menu"><span class="span_left_menu_third XJ_child" id="spanXJCZ">充值</span></li>
+                <li id="li_left_menu_TGB" class="li_left_menu li_left_menu_expand"><span class="span_left_menu_second" id="spanTGB">我的推广币</span><img id="imgTGB" class="img_left_menu_second" src="@Url.Content("~/Areas/Business/Css/images/down.png")" /></li>
+                <li id="li_left_menu_TGBMXCX" class="li_left_menu"><span class="span_left_menu_third TGB_child" id="spanTGBMXCX">明细查询</span></li>
+                <li id="li_left_menu_TGBYXQCX" class="li_left_menu"><span class="span_left_menu_third TGB_child" id="spanTGBYXQCX">有效期查询</span></li>
+                <li id="li_left_menu_TGBCZ" class="li_left_menu"><span class="span_left_menu_third TGB_child" id="spanTGBCZ">充值</span></li>
             </ul>
             <ul id="ulSHGJ" class="ul_left_menu">
                 <li class="li_left_menu">
