我的资金-收支明细

--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
@@ -52,6 +52,7 @@
                 </li>
                 <li id="li_left_menu_WDFB" class="li_left_menu"><span class="span_left_menu_second" id="spanWDFB">我的发布</span></li>
                 <li id="li_left_menu_WDSC" class="li_left_menu"><span class="span_left_menu_second" id="spanWDSC">我的收藏</span></li>
+                @*<li id="li_left_menu_WDJY" class="li_left_menu"><span class="span_left_menu_second" id="spanWDJY">我的交易</span></li>*@
                 <li id="li_left_menu_WDQZ" class="li_left_menu li_left_menu_expand"><span class="span_left_menu_second" id="spanWDQZ">我的求职</span><img id="imgWDQZ" src="@Url.Content("~/Areas/Business/Css/images/down.png")" class="img_left_menu_second" /></li>
                 <li id="li_left_menu_WDJL" class="li_left_menu"><span class="span_left_menu_third WDQZ_child" id="spanWDJL">我的简历</span></li>
                 <li id="li_left_menu_TDJL" class="li_left_menu"><span class="span_left_menu_third WDQZ_child" id="spanTDJL">投递记录</span></li>
@@ -69,7 +70,6 @@
                 <li id="li_left_menu_FSMSYQ" class="li_left_menu" style="width: 150px"><span id="spanFSMSYQ" class="span_left_menu_four JLGL_child" style="margin-left: 40px">发送的面试邀请</span></li>
                 <li id="li_left_menu_ZHXX" class="li_left_menu"><img id="imgZHXX" class="img_left_menu_third" /><span id="spanZHXX" class="span_left_menu_third WDZP_child">账号信息</span></li>
                 <li id="li_left_menu_GSZL" class="li_left_menu"><span id="spanGSZL" class="span_left_menu_four ZHXX_child">公司资料</span></li>
-                <li id="li_left_menu_KHFW" class="li_left_menu"><span class="span_left_menu_second" id="spanKHFW">客户服务</span></li>
                 <li id="li_left_menu_BZZX" class="li_left_menu"><span class="span_left_menu_second" id="spanBZZX">帮助中心</span></li>
             </ul>
             <ul id="ulWDZH" class="ul_left_menu">
