--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/WDXJ/WDXJ_MXCX.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/WDXJ/WDXJ_MXCX.css
@@ -192,3 +192,31 @@
 .div_main_info_bottom_fy {
     float: right;
 }
+
+.a_main_info_bottom_fy {
+    line-height: 18px;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 12px;
+    background-color: #ffffff;
+    border: 1px solid #dee3e7;
+    padding: 2px 6px;
+    display: inline-block;
+    margin: 0 6px;
+    color: #333;
+}
+
+.a_main_info_bottom_fy_current {
+    background-color: #5bc0de;
+    color: #ffffff;
+}
+
+.a_main_info_bottom_fy:hover {
+    background-color: #5bc0de;
+    text-decoration: none;
+    color: #ffffff;
+}
+
+.a_main_info_cz {
+    cursor: pointer;
+}
