冻结解冻完成

--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WDXJ/WDXJ_MXCX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WDXJ/WDXJ_MXCX.cshtml
@@ -124,15 +124,15 @@
                 <thead>
                     <tr class="tr_main_info">
                         <th style="width: 140px;">创建时间</th>
-                        <th style="width: 70px;">金额（元）</th>
                         <th style="width: 140px;">类型</th>
+                        <th style="width: 140px;">金额（元）</th>
                         <th style="width: 120px;">备注</th>
                     </tr>
                 </thead>
                 <tbody id="tbody_main_info_djjd_xttz"></tbody>
             </table>
             <div class="div_main_info_bottom">
-                <div class="div_main_info_bottom_fy" id="div_main_info_bottom_fy">
+                <div class="div_main_info_bottom_fy" id="div_main_info_bottom_djjd_fy">
                 </div>
             </div>
         </div>
