--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/WDXJ/WDXJ_MXCX.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/WDXJ/WDXJ_MXCX.css
@@ -141,6 +141,7 @@
     padding-bottom: 2px;
     margin-left: 10px;
     color: #ffffff;
+    border: none;
 }
 
     .span_main_info_right_button:hover {
