--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WDXJ/WDXJ_MXCX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WDXJ/WDXJ_MXCX.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "WDZJ";
+    ViewBag.Title = "WDXJ_MXCX";
     Layout = "~/Areas/Business/Views/Shared/_ListLayout.cshtml";
 }
 
