--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WDXJ/WDXJ_CZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WDXJ/WDXJ_CZ.cshtml
@@ -96,7 +96,7 @@
                             <span class="span_main_info_body_bottom">已阅读并同意</span>
                         </td>
                         <td>
-                            <span class="span_main_info_body_bottom span_main_info_body_bottom_xy">《信息小镇现金服务协议》</span>
+                            <span class="span_main_info_body_bottom span_main_info_body_bottom_xy" id="span_main_info_body_bottom_xy">《信息小镇现金服务协议》</span>
                         </td>
                     </tr>
                 </table>
