--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WDXJ/WDXJ_CZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WDXJ/WDXJ_CZ.cshtml
@@ -77,10 +77,86 @@
     <div id="div_main_info" class="div_main_info">
         <div class="div_main_info_body" id="div_main_info_body_wxfz">
             <div class="div_main_info_zffs">
-                <img class="img_radio" id="img_radio_wxzf"/>
-                <img class="img_zffs" id="img_zffs_wxzf" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_wxzf.png")"/>
+                <img class="img_radio" id="img_radio_wxzf" />
+                <img class="img_zffs" id="img_zffs_wxzf" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_wxzf.png")" />
+                <img class="img_select" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_zffs_select.png")" />
+            </div>
+        </div>
+        <div class="div_main_info_body" id="div_main_info_body_wyzf">
+            <div class="div_main_info_tip">
+                请选择支付的银行卡<span class="span_main_info_tip">（请确保您的银行卡已开通网银） </span>
+            </div>
+            <div class="div_main_info_zffs_wyzf">
+                <img class="img_radio" id="img_radio_wyzf_gsyh"/>
+                <img class="img_zffs" id="img_zffs_wxzf_gsyh" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_wyzf_gsyh.png")"/>
                 <img class="img_select" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_zffs_select.png")"/>
             </div>
+            <div class="div_main_info_zffs_wyzf">
+                <img class="img_radio" id="img_radio_wyzf_zsyh"/>
+                <img class="img_zffs" id="img_zffs_wxzf_zsyh" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_wyzf_zsyh.png")"/>
+                <img class="img_select" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_zffs_select.png")"/>
+            </div>
+            <div class="div_main_info_zffs_wyzf">
+                <img class="img_radio" id="img_radio_wyzf_nyyh"/>
+                <img class="img_zffs" id="img_zffs_wxzf_nyyh" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_wyzf_nyyh.png")" />
+                <img class="img_select" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_zffs_select.png")"/>
+            </div>
+            <div class="div_main_info_zffs_wyzf">
+                <img class="img_radio" id="img_radio_wyzf_zgyh"/>
+                <img class="img_zffs" id="img_zffs_wxzf_zgyh" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_wyzf_zgyh.png")" />
+                <img class="img_select" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_zffs_select.png")"/>
+            </div>
+            <div class="div_main_info_zffs_wyzf">
+                <img class="img_radio" id="img_radio_wyzf_jsyh"/>
+                <img class="img_zffs" id="img_zffs_wxzf_jsyh" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_wyzf_jsyh.png")" />
+                <img class="img_select" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_zffs_select.png")"/>
+            </div>
+            <div class="div_main_info_zffs_wyzf">
+                <img class="img_radio" id="img_radio_wyzf_pfyh"/>
+                <img class="img_zffs" id="img_zffs_wxzf_pfyh" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_wyzf_pfyh.png")" />
+                <img class="img_select" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_zffs_select.png")"/>
+            </div>
+            <div class="div_main_info_zffs_wyzf">
+                <img class="img_radio" id="img_radio_wyzf_jtyh"/>
+                <img class="img_zffs" id="img_zffs_wxzf_jtyh" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_wyzf_jtyh.png")" />
+                <img class="img_select" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_zffs_select.png")"/>
+            </div>
+            <div class="div_main_info_zffs_wyzf">
+                <img class="img_radio" id="img_radio_wyzf_msyh"/>
+                <img class="img_zffs" id="img_zffs_wxzf_msyh" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_wyzf_msyh.png")"/>
+                <img class="img_select" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_zffs_select.png")"/>
+            </div>
+            <div class="div_main_info_zffs_wyzf">
+                <img class="img_radio" id="img_radio_wyzf_payh"/>
+                <img class="img_zffs" id="img_zffs_wxzf_payh" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_wyzf_payh.png")" />
+                <img class="img_select" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_zffs_select.png")"/>
+            </div>
+            <div class="div_main_info_zffs_wyzf">
+                <img class="img_radio" id="img_radio_wyzf_gfyh"/>
+                <img class="img_zffs" id="img_zffs_wxzf_gfyh" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_wyzf_gfyh.png")" />
+                <img class="img_select" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_zffs_select.png")"/>
+            </div>
+            <div class="div_main_info_zffs_wyzf">
+                <img class="img_radio" id="img_radio_wyzf_gdyh"/>
+                <img class="img_zffs" id="img_zffs_wxzf_gdyh" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_wyzf_gdyh.png")" />
+                <img class="img_select" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_zffs_select.png")"/>
+            </div>
+            <div class="div_main_info_zffs_wyzf">
+                <img class="img_radio" id="img_radio_wyzf_bjyh"/>
+                <img class="img_zffs" id="img_zffs_wxzf_bjyh" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_wyzf_bjyh.png")" />
+                <img class="img_select" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_zffs_select.png")"/>
+            </div>
+            <div class="div_main_info_zffs_wyzf">
+                <img class="img_radio" id="img_radio_wyzf_zxyh"/>
+                <img class="img_zffs" id="img_zffs_wxzf_zxyh" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_wyzf_zxyh.png")" />
+                <img class="img_select" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_zffs_select.png")"/>
+            </div>
+            <div class="div_main_info_zffs_wyzf">
+                <img class="img_radio" id="img_radio_wyzf_xyyh" />
+                <img class="img_zffs" id="img_zffs_wxzf_xyyh" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_wyzf_xyyh.png")"/>
+                <img class="img_select" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_zffs_select.png")"/>
+            </div>
+
         </div>
         <div class="div_main_info_body" id="div_main_info_body_zfbfz">
             <div class="div_main_info_zffs">
@@ -89,24 +165,24 @@
                 <img class="img_select" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_zffs_select.png")" />
             </div>
         </div>
-            <div class="div_main_info_body">
-                <input class="input_main_info_ljzf" id="input_main_info_ljzf" value="立即支付" type="button" />
-            </div>
-            <div class="div_main_info_body">
-                <table>
-                    <tr>
-                        <td>
-                            <input class="input_main_info_body_bottom" id="input_main_info_body_bottom" type="checkbox" />
-                        </td>
-                        <td>
-                            <span class="span_main_info_body_bottom">已阅读并同意</span>
-                        </td>
-                        <td>
-                            <span class="span_main_info_body_bottom span_main_info_body_bottom_xy" id="span_main_info_body_bottom_xy">《信息小镇现金服务协议》</span>
-                        </td>
-                    </tr>
-                </table>
-            </div>
+        <div class="div_main_info_body">
+            <input class="input_main_info_ljzf" id="input_main_info_ljzf" value="立即支付" type="button" />
+        </div>
+        <div class="div_main_info_body">
+            <table>
+                <tr>
+                    <td>
+                        <input class="input_main_info_body_bottom" id="input_main_info_body_bottom" type="checkbox" />
+                    </td>
+                    <td>
+                        <span class="span_main_info_body_bottom">已阅读并同意</span>
+                    </td>
+                    <td>
+                        <span class="span_main_info_body_bottom span_main_info_body_bottom_xy" id="span_main_info_body_bottom_xy">《信息小镇现金服务协议》</span>
+                    </td>
+                </tr>
+            </table>
+        </div>
     </div>
 </body>
 </html>
